Sombras, gradients, rutas relativas y espaciado entre imgs

--- a/index.html
+++ b/index.html
@@ -18,69 +18,73 @@
     <header id="headerIndex">
         <img src="img/img1/PavilaViajes1-01.jpg" style="width: 100%;">
     </header>
-    <nav class="navbar navbar-expand-md navbar-default justify-content-end">
+    <div class="div-navbar">
+    
+        
+    <nav class="navbar navbar-expand-md navbar-default justify-content-center">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="menu">
+        <div class="collapse navbar-collapse justify-content-center" id="menu">
             <ul class="navbar-nav justify-content-end">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Paquetes
+                    <a class="nav-link " href="#">Paquetes
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Cruceros</a>
+                    <a class="nav-link " href="#">Cruceros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contactos</a>
+                    <a class="nav-link " href="#">Contactos</a>
                 </li>
             </ul>
         </div>
     </nav>
+    </div>
     <!-- <section>
         <img src="img/img1/PavilaViajes2-01.jpg" style="width: 100%">
     </section> -->
     <section>
         <img src="img/img1/PavilaViajes3-01.jpg" style="width: 100%">
     </section>
-    <section>
-        <h1>
+    <section class="vendido">
+        <h1 >
             Los Mas Vendidos
         </h1>
-        <div>
+        <div class="img-content">
             <div class="row">
-                <div class="col-md-4">
-                    <img src="img/img1/Boletos Miami-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                <div class="col-md-4 ">
+                    <img src="img/img1/Boletos Miami-01.jpg" alt="" class="img-fluid img-vendida align-self-center" >
                 </div>
                 <div class="col-md-8">
-                    <img src="img/img1/MargaritaElcaribeatuspies-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                    <img src="img/img1/MargaritaElcaribeatuspies-01.jpg" alt="" class="img-fluid img-vendida align-self-center" >
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-8">
-                    <a href="pagCuidaTuSonrisa.html">
-                        <img src="img/img1/CuidatuSonrisa-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                    <a href="pages/pagCuidaTuSonrisa.html">
+                        <img src="img/img1/CuidatuSonrisa-01.jpg" alt="" class="img-fluid img-vendida align-self-center" >
                     </a>
 
                 </div>
                 <div class="col-md-4">
-                    <a href="pagEnamorateDeMerida.html">
-                        <img src="img/img1/Enamorate-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                    <a href="pages/pagEnamorateDeMerida.html">
+                        <img src="img/img1/Enamorate-01.jpg" alt="" class="img-fluid img-vendida align-self-center" >
                     </a>
 
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <a href="pagEscapeGay.html">
-                        <img src="img/img1/Escapegay-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                    <a href="pages/pagEscapeGay.html">
+                        <img src="img/img1/Escapegay-01.jpg" alt="" class="img-fluid img-vendida align-self-center">
                     </a>
 
                 </div>
                 <div class="col-md-8">
-                    <a href="pagRutaDelRon.html">
-                        <img src="img/img1/rutadelron-01.jpg" alt="" class="img-fluid" style="width: 100%;">
+                    <a href="pages/pagRutaDelRon.html">
+                        <img src="img/img1/rutadelron-01.jpg" alt="" class="img-fluid align-self-center img-vendida" >
                     </a>
 
                 </div>
@@ -100,6 +104,7 @@
                     </a>
                     <a href="">
                         <img src="img/img2/Venezuela-01.png" class="divParentImg2">
+                       <p class="phone-number">+58 4244823109</p>
                     </a>
                     <a href="">
                         <img src="img/img2/Colombia-01.png" class="divParentImg3">
